[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lakeboard-to-xmind"
version = "0.1.0"
description = "语雀 Lakeboard 思维导图 .lakeboard 与 XMind .xmind 互转工具。"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "fhysy", email = "1149505133@qq.com" }
]
maintainers = [
  { name = "fhysy", email = "1149505133@qq.com" }
]
keywords = ["yuque", "lakeboard", "xmind", "mindmap", "converter", "语雀", "思维导图"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/fanhuayishiy/lakeboard-to-xmind"
Repository = "https://github.com/fanhuayishiy/lakeboard-to-xmind"
Issues = "https://github.com/fanhuayishiy/lakeboard-to-xmind/issues"
Changelog = "https://github.com/fanhuayishiy/lakeboard-to-xmind/blob/main/CHANGELOG.md"

[project.scripts]
lakeboard-to-xmind = "lakeboard_to_xmind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakeboard_to_xmind"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
  "/SECURITY.md",
]


